<resources>
    <string name="description">\u3000\u3000 W tej części aplikacji możesz utworzyć swój własny tag NFC.
        Po zapisaniu danych na naklejce możesz przykleić ją do tylu swojego telefonu,
        aby inni mogli go w łatwy sposób zeskanować i otrzymać kontakty uprzednio zapisane na tagu.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Singiel2.0</string>

    <string name="zarejestruj_sie">Zarejestruj się</string>
    <string name="zaloguj_sie">zaloguj</string>
    <string name="logout">Wyloguj</string>
    <string name="edit_password">Zmień hasło</string>

    <string name="send_via_nfc">Zapisz na tagu NFC</string>

    <string name="potwierdz_haslo">Potweirdź hasło</string>

    <string name="haslo">Hasło</string>

    <string name="email">Email</string>

    <string name="or">LUB</string>

    <string name="singiel20">Singiel 2.0</string>


    <!-- activity_preferences -->

    <string name="myName">Moje imię</string>

    <string name="nameInfo">Twoje imię będzie publiczne</string>

    <string name="next">Dalej</string>

    <!-- layout_preferences1-->
    <string name="dateInfo">Twoja data urodzenia będzie publiczna</string>

    <string name="accept_reg">Akceptuj</string>

    <string name="whoami">Jestem </string>

    <string name="whereFrom">Skąd jestes?  </string>


    <string name="accept_reg_info">Zapoznaj się z regulaminem korzystania z serwisu</string>

    <string name="regulamin">Phasellus ante ipsum, faucibus ac neque ut.</string>

    <!-- layout_preferences2-->


    <string name="accept_datebirth">Dalej</string>

    <string name="age_info">Twój wiek będzie publiczny</string>

    <string name="datebirth">Moja data urodzenia</string>

    <string name="txt_data">MM/DD/YYYY</string>

    <!-- layout_preferences3-->


    <string name="gender_info">JESTEM..</string>

    <string name="chbox_k">KOBIETĄ</string>

    <string name="chbox_m">MĘŻCZYZNĄ</string>

    <string name="woman">KOBIETĄ</string>

    <string name="man">MĘŻCZYZNĄ</string>

    <!-- layout_preferences4-->


    <string name="city_info">Z jakiego miasta jesteś?</string>

    <string name="txt_city">Wpisz miasto</string>

    <string name="btn_city">Dalej</string>

    <!-- layout_preferences5-->


    <string name="interested_info">Czym się interesujesz?</string>

    <string name="txt_interested">Co robisz w wolnym czasie?</string>

    <string name="btn_interested">Dalej</string>

    <!-- layout_preferences6-->


    <string name="photo_info">Dodaj zdjęcie</string>

    <string name="txt_photo">Wybierz zdjęcie</string>

    <string name="btn_photo">Zakończ</string>

    <string name="dodaj_zdjecie">Dodaj zdjęcie</string>


    <!-- edit_profile layout-->

    <string name="edit_profile_info">Edytuj profil</string>

    <string name="zdj">ZDJ</string>

    <string name="edit_description_info">Opis</string>

    <string name="edit_city_profile_info">Miasto</string>

    <string name="save_profile_btn">ZAPISZ</string>


    <!-- change_password layout-->
    <string name="password_info">Zmień hasło</string>

    <string name="old_password_change">Stare hasło</string>

    <string name="new_pasword_change">Nowe hasło</string>

    <string name="confirm_new_password">Potwierdź nowe hasło</string>

    <string name="confirm_old_password">Potwierdź stare hasło</string>

    <string name="change_passw_btn">Zmień</string>
    <!-- delete_account layout-->
    <string name="delete_info">Usuń konto</string>

    <string name="delete_password">Hasło</string>

    <string name="delete_passwordconfirm">Potwierdź hasło</string>

    <string name="delete_account_btn">USUŃ KONTO</string>

    <!-- profile layout-->
    <string name="profile_info">Witaj, xyz!</string>

    <string name="description_info">Opis</string>

    <string name="city_profile_info">Miasto</string>

    <string name="edit_profile_btn">Edytuj</string>
    <string name="title_activity_preferences2">PreferencesActivity2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="imie">Imię</string>
    <string name="EditName">Imię</string>
    <string name="txtBornDate">Data urodzenia</string>
    <string name="LayoutBornDate">Data urodzenia</string>
    <string name="editPicture">EditPicture</string>
    <string name="txtLayoutCity">txtLayoutCity</string>
    <string name="edycja_profilu">Edytuj profil</string>
    <string name="edit_photo">Zmień zdjęcie</string>


    <string name="Home">Home</string>
    <string name="Profil">Profil</string>
    <string name="Czat">Czat</string>
    <string name="Share">Share</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>