<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:contex="com.example.FuelCalcMW.TankActivity">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/baseline_password_24"
        android:orderInCategory="1"
        android:title="@string/edit_password"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/outline_delete_forever_24"
        android:orderInCategory="1"
        android:title="@string/delete_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/outline_logout_24"
        android:orderInCategory="1"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

</menu>