<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="80dp"
        android:gravity="center_horizontal"
        android:text="@string/password_info"
        android:textColor="@color/colorBlack"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutPasswordChange"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtOldPassword"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/bcg_textarea"
        android:hint="@string/old_password_change"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:textSize="15sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutPasswordChange1"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/bcg_textarea"
        android:textAlignment="center"
        android:hint="@string/new_pasword_change"
        android:inputType="textPassword"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutPasswordChange2"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bcg_textarea"
        android:textAlignment="center"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:gravity="center_horizontal" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnChangePassword"
        android:text="@string/change_passw_btn"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_round"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />



</LinearLayout>