<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:background="@color/cardview_light_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:text="@string/singiel20"
        android:textColor="@color/colorBlack"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/accept_reg_info"
        android:textColor="@color/colorGrey"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutPreferences1a"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtPreferences1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bcg_textarea"
        android:hint="@string/regulamin"
        android:inputType="none"
        android:editable="false"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutPreferences1"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btnAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_round"
        android:onClick="activity_preferences1"
        android:text="@string/accept_reg"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />



</LinearLayout>