<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:text="@string/datebirth"
        android:textColor="@color/colorBlack"
        android:textSize="32sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutPreferences2a"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtPreferences2"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/bcg_textarea"
        android:gravity="center|center_horizontal"
        android:hint="@string/txt_data"
        android:inputType="date"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textColorHint="#9C27B0"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/age_info"
        android:textColor="@color/colorGrey"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutPreferences2"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btnConfirmAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_round"
        android:onClick="activity_preferences1"
        android:text="@string/accept_reg"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />



</LinearLayout>