<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/edit_profile_info"
        android:textColor="@color/colorBlack"
        android:textSize="32sp" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPictrue"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@drawable/bcg_textarea"
        android:hint="@string/zdj"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="15sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutEditProfile"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/edit_description_info"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtNewDescription"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/bcg_textarea"
        android:textAlignment="center"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutEditProfile1"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/edit_city_profile_info"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtNewCity"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bcg_textarea"
        android:textAlignment="center"
        android:textSize="15sp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSaveProfile"
        android:text="@string/save_profile_btn"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_round"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />


</LinearLayout>
