<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="80dp"
        android:gravity="center_horizontal"
        android:text="@string/delete_info"
        android:textColor="@color/colorBlack"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutAccountDelete"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtDeletePassword"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/bcg_textarea"
        android:hint="@string/delete_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="15sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutAccountDelete1"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtConfirmDeletePassword"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/bcg_textarea"
        android:hint="@string/delete_passwordconfirm"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutAccountDelete2"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDeleteAccount"
        android:text="@string/delete_account_btn"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_round"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />



</LinearLayout>
